# bangor-icp-1029-labs

./: .gitignore  CMakeLists.txt  Code Snippets.docx  README.md
1/: lab_1.c
10/src/: exercise1.c  exercise2.c
2/src/: chatbot.c  exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c
3/src/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise6.c  exercise7.c  exercise8.c
4/src/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  scrambler.c
5/src/: exercise1.c  exercise2.c  exercise3.c
6/src/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  jackpot_dreams.c
7/src/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c
8/src/: example.c  exercise1_2.c  exercise3.c  spiral.c
9/src/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c
