# Author: Dominik Harmim <harmim6@gmail.com>

CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_C_FLAGS "-std=c99 -Wall -Wextra -Werror -g")

PROJECT(lab)
SET(WORKING_DIR 4/src)

#FILE(GLOB SOURCES "${WORKING_DIR}/*.c")
SET(SOURCES "${WORKING_DIR}/scrambler.c")
#FILE(GLOB HEADERS "${WORKING_DIR}/*.h")

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})
